force-app/main/default/objects/Employees__c/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <label>Account Number:</label>
    <length>9</length>
    <type>Text</type>
</CustomField>