force-app/main/default/objects/Employees__c/fields/Address_of_Medical_Centre__c.field-meta.xml
<CustomField>
    <fullName>Address_of_Medical_Centre__c</fullName>
    <label>Address of Medical Centre</label>
    <type>TextArea</type>
</CustomField>