force-app/main/default/objects/Employees__c/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <formula>IF(
  MONTH(TODAY()) &gt; MONTH(Date_of_Birth__c) ||
  (MONTH(TODAY()) = MONTH(Date_of_Birth__c) &amp;&amp; DAY(TODAY()) &gt;= DAY(Date_of_Birth__c)),
  YEAR(TODAY()) - YEAR(Date_of_Birth__c),
  YEAR(TODAY()) - YEAR(Date_of_Birth__c) - 1
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>