force-app/main/default/objects/Employees__c/fields/Allergy_Requires_Medication__c.field-meta.xml
<CustomField>
    <fullName>Allergy_Requires_Medication__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allergy Requires Medication</label>
    <type>Checkbox</type>
</CustomField>