force-app/main/default/objects/Employees__c/fields/Alt_Number__c.field-meta.xml
<CustomField>
    <fullName>Alt_Number__c</fullName>
    <label>Alt Number</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>