force-app/main/default/objects/Employees__c/fields/Appraisal_Target_Date__c.field-meta.xml
<CustomField>
    <fullName>Appraisal_Target_Date__c</fullName>
    <label>Appraisal Target Date</label>
    <type>Date</type>
</CustomField>