force-app/main/default/objects/Employees__c/fields/Assigned_to_Client__c.field-meta.xml
<CustomField>
    <fullName>Assigned_to_Client__c</fullName>
    <formula>Assigned_to_Unit__r.Client__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned to Client</label>
    <type>Text</type>
</CustomField>