force-app/main/default/objects/Employees__c/fields/Assigned_to_Unit__c.field-meta.xml
<CustomField>
    <fullName>Assigned_to_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned to Unit</label>
    <referenceTo>Unit__c</referenceTo>
    <relationshipLabel>Employees</relationshipLabel>
    <relationshipName>Employees</relationshipName>
    <type>Lookup</type>
</CustomField>