force-app/main/default/objects/Employees__c/fields/Austroads_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Austroads_Expiry_Date__c</fullName>
    <label>Austroads Expiry Date</label>
    <type>Date</type>
</CustomField>