force-app/main/default/objects/Employees__c/fields/Birthday__c.field-meta.xml
<CustomField>
    <fullName>Birthday__c</fullName>
    <formula>LPAD(TEXT(MONTH(Date_of_Birth__c )), 2, &apos;0&apos;) &amp; &quot;/&quot; &amp; TEXT(DAY(Date_of_Birth__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Birthday</label>
    <type>Text</type>
</CustomField>