force-app/main/default/objects/Employees__c/fields/Boot_Size__c.field-meta.xml
<CustomField>
    <fullName>Boot_Size__c</fullName>
    <label>Boot Size</label>
    <length>2</length>
    <type>Text</type>
</CustomField>