force-app/main/default/objects/Employees__c/fields/Boot_Type__c.field-meta.xml
<CustomField>
    <fullName>Boot_Type__c</fullName>
    <label>Boot Type</label>
    <length>15</length>
    <type>Text</type>
</CustomField>