force-app/main/default/objects/Employees__c/fields/Business_Department__c.field-meta.xml
<CustomField>
    <fullName>Business_Department__c</fullName>
    <label>Business Department</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Well Servicing</fullName>
            </value>
            <value>
                <fullName>Remote Camps</fullName>
            </value>
            <value>
                <fullName>Transport</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>