force-app/main/default/objects/Employees__c/fields/City_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>City_of_Birth__c</fullName>
    <label>City of Birth</label>
    <type>TextArea</type>
</CustomField>