force-app/main/default/objects/Employees__c/fields/Condition_Requires_Medication__c.field-meta.xml
<CustomField>
    <fullName>Condition_Requires_Medication__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Condition Requires Medication</label>
    <type>Checkbox</type>
</CustomField>