force-app/main/default/objects/Employees__c/fields/Covid_Vaccinations__c.field-meta.xml
<CustomField>
    <fullName>Covid_Vaccinations__c</fullName>
    <label>Covid Vaccinations</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1st</fullName>
                <default>true</default>
                <label>1st Vax</label>
            </value>
            <value>
                <fullName>Ist Vax_cert</fullName>
                <label>1st Vax + Cert</label>
            </value>
            <value>
                <fullName>2nd Vax -cert</fullName>
                <label>2nd Vax</label>
            </value>
            <value>
                <fullName>2nd_vac</fullName>
                <label>2nd Vax + Cert</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>