force-app/main/default/objects/Employees__c/fields/Crew_Change_Location__c.field-meta.xml
<CustomField>
    <fullName>Crew_Change_Location__c</fullName>
    <label>Crew Change Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adelaide</fullName>
            </value>
            <value>
                <fullName>Brisbane</fullName>
            </value>
            <value>
                <fullName>Toowoomba</fullName>
            </value>
            <value>
                <fullName>Dalby</fullName>
            </value>
            <value>
                <fullName>Chinchilla</fullName>
            </value>
            <value>
                <fullName>Roma</fullName>
            </value>
            <value>
                <fullName>Miles</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>