force-app/main/default/objects/Employees__c/fields/Date_Acquired_MC__c.field-meta.xml
<CustomField>
    <fullName>Date_Acquired_MC__c</fullName>
    <label>Date Acquired MC</label>
    <type>Date</type>
</CustomField>