force-app/main/default/objects/Employees__c/fields/Date_Assigned_to_Current_Unit__c.field-meta.xml
<CustomField>
    <fullName>Date_Assigned_to_Current_Unit__c</fullName>
    <label>Date Assigned to Current Unit</label>
    <type>Date</type>
</CustomField>