force-app/main/default/objects/Employees__c/fields/Date_Given__c.field-meta.xml
<CustomField>
    <fullName>Date_Given__c</fullName>
    <inlineHelpText>Date the uniform was provided</inlineHelpText>
    <label>Date Given</label>
    <type>Date</type>
</CustomField>