force-app/main/default/objects/Employees__c/fields/Demerit_Points_Accrued_Last_12_Months__c.field-meta.xml
<CustomField>
    <fullName>Demerit_Points_Accrued_Last_12_Months__c</fullName>
    <description>Demerit Points Accrued  - Last 12 Months</description>
    <label>Demerit Points Accrued</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>