force-app/main/default/objects/Employees__c/fields/Details_Of_Allergy__c.field-meta.xml
<CustomField>
    <fullName>Details_Of_Allergy__c</fullName>
    <label>Details Of Allergy</label>
    <type>TextArea</type>
</CustomField>