force-app/main/default/objects/Employees__c/fields/Details_of_Driver_Experience_MC_only__c.field-meta.xml
<CustomField>
    <fullName>Details_of_Driver_Experience_MC_only__c</fullName>
    <label>Details of Driver Experience (MC only)</label>
    <type>TextArea</type>
</CustomField>