force-app/main/default/objects/Employees__c/fields/Details_of_Medical_Condition__c.field-meta.xml
<CustomField>
    <fullName>Details_of_Medical_Condition__c</fullName>
    <inlineHelpText>Describe the condition</inlineHelpText>
    <label>Details Of Medical Condition</label>
    <type>TextArea</type>
</CustomField>