force-app/main/default/objects/Employees__c/fields/Doctors_Name__c.field-meta.xml
<CustomField>
    <fullName>Doctors_Name__c</fullName>
    <label>Doctors Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>