force-app/main/default/objects/Employees__c/fields/Driver_App_Password__c.field-meta.xml
<CustomField>
    <fullName>Driver_App_Password__c</fullName>
    <label>Driver App Password</label>
    <length>25</length>
    <type>Text</type>
</CustomField>