force-app/main/default/objects/Employees__c/fields/Driver_NHVR_Acredd__c.field-meta.xml
<CustomField>
    <fullName>Driver_NHVR_Acredd__c</fullName>
    <inlineHelpText>Driver is is NHVR AFM Competent if they have completed the NHVR - AFM Competency</inlineHelpText>
    <label>Driver - NHVR - AFM Competent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>