force-app/main/default/objects/Employees__c/fields/Driver_Username_Email__c.field-meta.xml
<CustomField>
    <fullName>Driver_Username_Email__c</fullName>
    <description>Driver User Email used for App Login</description>
    <formula>Driver_User__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Driver User Email used for App Login</inlineHelpText>
    <label>Driver Username (Email)</label>
    <type>Text</type>
</CustomField>