force-app/main/default/objects/Employees__c/fields/EC_1_Mobile__c.field-meta.xml
<CustomField>
    <fullName>EC_1_Mobile__c</fullName>
    <description>Emergency Contact 1 Mobile</description>
    <label>Best Contact (EC1)</label>
    <type>Phone</type>
</CustomField>