force-app/main/default/objects/Employees__c/fields/EC_2_Mobile__c.field-meta.xml
<CustomField>
    <fullName>EC_2_Mobile__c</fullName>
    <description>Emergency Contact 2&apos;s Mobile</description>
    <label>Best Contact # (EC2)</label>
    <type>Phone</type>
</CustomField>