force-app/main/default/objects/Employees__c/fields/Em_ID__c.field-meta.xml
<CustomField>
    <fullName>Em_ID__c</fullName>
    <inlineHelpText>Employee # as per ID # from Key Pay</inlineHelpText>
    <label>Employee ID#</label>
    <length>8</length>
    <type>Text</type>
</CustomField>