force-app/main/default/objects/Employees__c/fields/Emergency_Cont__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Cont__c</fullName>
    <label>Alternate Contact (EC1)</label>
    <type>Phone</type>
</CustomField>