force-app/main/default/objects/Employees__c/fields/Emergency_Contact__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact__c</fullName>
    <label>Emergency Contact (EC1)</label>
    <length>30</length>
    <type>Text</type>
</CustomField>