force-app/main/default/objects/Employees__c/fields/Employee_Photo__c.field-meta.xml
<CustomField>
    <fullName>Employee_Photo__c</fullName>
    <label>Employee Photo</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>