force-app/main/default/objects/Employees__c/fields/Finish_Date__c.field-meta.xml
<CustomField>
    <fullName>Finish_Date__c</fullName>
    <label>Finish Date</label>
    <type>Date</type>
</CustomField>