force-app/main/default/objects/Employees__c/fields/Frequent_Flyer_Program__c.field-meta.xml
<CustomField>
    <fullName>Frequent_Flyer_Program__c</fullName>
    <label>Frequent Flyer Program</label>
    <length>50</length>
    <type>Text</type>
</CustomField>