force-app/main/default/objects/Employees__c/fields/Geotab__c.field-meta.xml
<CustomField>
    <fullName>Geotab__c</fullName>
    <label>Geotab #</label>
    <length>10</length>
    <type>Text</type>
</CustomField>