force-app/main/default/objects/Employees__c/fields/Has_Allergy__c.field-meta.xml
<CustomField>
    <fullName>Has_Allergy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Allergy</label>
    <type>Checkbox</type>
</CustomField>