force-app/main/default/objects/Employees__c/fields/Has_Medical_Condition__c.field-meta.xml
<CustomField>
    <fullName>Has_Medical_Condition__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Do they have a medical conditition</inlineHelpText>
    <label>Has Medical Condition</label>
    <type>Checkbox</type>
</CustomField>