force-app/main/default/objects/Employees__c/fields/Identifies_as_Aboriginal_Torres_Strait__c.field-meta.xml
<CustomField>
    <fullName>Identifies_as_Aboriginal_Torres_Strait__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Identifies as Aboriginal/Torres Strait</label>
    <type>Checkbox</type>
</CustomField>