force-app/main/default/objects/Employees__c/fields/Is_Bizlinc_User__c.field-meta.xml
<CustomField>
    <fullName>Is_Bizlinc_User__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is this Employee a Bizlinc User</inlineHelpText>
    <label>Is Bizlinc User</label>
    <type>Checkbox</type>
</CustomField>