force-app/main/default/objects/Employees__c/fields/Issue_Payslip_Via__c.field-meta.xml
<CustomField>
    <fullName>Issue_Payslip_Via__c</fullName>
    <label>Issue Payslip Via</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Post</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>