force-app/main/default/objects/Employees__c/fields/Jacket__c.field-meta.xml
<CustomField>
    <fullName>Jacket__c</fullName>
    <label>Jacket</label>
    <length>5</length>
    <type>Text</type>
</CustomField>