force-app/main/default/objects/Employees__c/fields/Local_Gov_Area__c.field-meta.xml
<CustomField>
    <fullName>Local_Gov_Area__c</fullName>
    <label>Local Gov Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Local_Government_Area</valueSetName>
    </valueSet>
</CustomField>