force-app/main/default/objects/Employees__c/fields/MC_Experience__c.field-meta.xml
<CustomField>
    <fullName>MC_Experience__c</fullName>
    <label>MC Experience</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3 or more years</fullName>
            </value>
            <value>
                <fullName>Lessthan</fullName>
                <label>Less than 3 Years</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>