force-app/main/default/objects/Employees__c/fields/Medical_Centre__c.field-meta.xml
<CustomField>
    <fullName>Medical_Centre__c</fullName>
    <label>Medical Centre</label>
    <length>25</length>
    <type>Text</type>
</CustomField>