force-app/main/default/objects/Employees__c/fields/Medical_Centre_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Medical_Centre_Phone_Number__c</fullName>
    <label>Medical Centre Phone Number</label>
    <type>Phone</type>
</CustomField>