force-app/main/default/objects/Employees__c/fields/Medical_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Medical_Expiry_Date__c</fullName>
    <label>Medical Expiry Date (3 Yrs)</label>
    <type>Date</type>
</CustomField>