force-app/main/default/objects/Employees__c/fields/Medical_Notes__c.field-meta.xml
<CustomField>
    <fullName>Medical_Notes__c</fullName>
    <description>any exceptions/conditions listed on the medical</description>
    <label>Medical Notes</label>
    <type>TextArea</type>
</CustomField>