force-app/main/default/objects/Employees__c/fields/Mobile__c.field-meta.xml
<CustomField>
    <fullName>Mobile__c</fullName>
    <description>Mobile Number</description>
    <inlineHelpText>Mobile Numbers Only &gt; EG: 61429387622</inlineHelpText>
    <label>Best Contact #</label>
    <type>Phone</type>
</CustomField>