force-app/main/default/objects/Employees__c/fields/Off_Hitch_Dates__c.field-meta.xml
<CustomField>
    <fullName>Off_Hitch_Dates__c</fullName>
    <label>Off Hitch Dates</label>
    <type>TextArea</type>
</CustomField>