force-app/main/default/objects/Employees__c/fields/Other_Contact_Details__c.field-meta.xml
<CustomField>
    <fullName>Other_Contact_Details__c</fullName>
    <label>Other Contact Details</label>
    <type>TextArea</type>
</CustomField>