force-app/main/default/objects/Employees__c/fields/Performance_Appraisal_Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>Performance_Appraisal_Issue_Date__c</fullName>
    <label>Performance Appraisal Due/Issued</label>
    <type>Date</type>
</CustomField>