force-app/main/default/objects/Employees__c/fields/Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number__c</fullName>
    <label>Alt Contact #</label>
    <type>Phone</type>
</CustomField>