force-app/main/default/objects/Employees__c/fields/PID_Letter_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>PID_Letter_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PID Letter Uploaded</label>
    <type>Checkbox</type>
</CustomField>