force-app/main/default/objects/Employees__c/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <inlineHelpText>INACTIVE - DO NOT USE</inlineHelpText>
    <label>Position 1</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accountant</fullName>
            </value>
            <value>
                <fullName>Accounts &amp; Payroll Officer</fullName>
            </value>
            <value>
                <fullName>Administration Officer</fullName>
            </value>
            <value>
                <fullName>Assistant Driller</fullName>
            </value>
            <value>
                <fullName>Auto Electrician</fullName>
            </value>
            <value>
                <fullName>Camp Attendant</fullName>
            </value>
            <value>
                <fullName>Camp Cook</fullName>
            </value>
            <value>
                <fullName>Camp Manager</fullName>
            </value>
            <value>
                <fullName>Chief Operating Officer</fullName>
            </value>
            <value>
                <fullName>Derrickman</fullName>
            </value>
            <value>
                <fullName>Diesel Fitter</fullName>
            </value>
            <value>
                <fullName>Driller</fullName>
            </value>
            <value>
                <fullName>Electrician</fullName>
            </value>
            <value>
                <fullName>Fabrications Leading Hand</fullName>
            </value>
            <value>
                <fullName>Field Safety Officer</fullName>
            </value>
            <value>
                <fullName>Field Supervisor</fullName>
            </value>
            <value>
                <fullName>Finance Manager</fullName>
            </value>
            <value>
                <fullName>Floorhand</fullName>
            </value>
            <value>
                <fullName>Groundskeeper</fullName>
            </value>
            <value>
                <fullName>HR Manager</fullName>
            </value>
            <value>
                <fullName>Junior Administration Officer</fullName>
            </value>
            <value>
                <fullName>Labourer</fullName>
            </value>
            <value>
                <fullName>Lead Floorhand</fullName>
            </value>
            <value>
                <fullName>Lead Station Hand</fullName>
            </value>
            <value>
                <fullName>Leasehand</fullName>
            </value>
            <value>
                <fullName>Maintenance Manager</fullName>
            </value>
            <value>
                <fullName>Managing Director</fullName>
            </value>
            <value>
                <fullName>Mechanic</fullName>
            </value>
            <value>
                <fullName>Mechanical Supervisor</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>