force-app/main/default/objects/Employees__c/fields/PositionLookup__c.field-meta.xml
<CustomField>
    <fullName>PositionLookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Position</label>
    <referenceTo>Position__c</referenceTo>
    <relationshipLabel>Employees</relationshipLabel>
    <relationshipName>Employees</relationshipName>
    <type>Lookup</type>
</CustomField>