force-app/main/default/objects/Employees__c/fields/Postal_Address__c.field-meta.xml
<CustomField>
    <fullName>Postal_Address__c</fullName>
    <inlineHelpText>Po Box</inlineHelpText>
    <label>Postal Address (if different)</label>
    <type>TextArea</type>
</CustomField>