force-app/main/default/objects/Employees__c/fields/Pre_employment_Medical__c.field-meta.xml
<CustomField>
    <fullName>Pre_employment_Medical__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pre-employment Medical</label>
    <type>Checkbox</type>
</CustomField>