force-app/main/default/objects/Employees__c/fields/Probation__c.field-meta.xml
<CustomField>
    <fullName>Probation__c</fullName>
    <label>Probation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>3 Month</fullName>
            </value>
            <value>
                <fullName>6 Month</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>