force-app/main/default/objects/Employees__c/fields/Rapid_Induct_Password__c.field-meta.xml
<CustomField>
    <fullName>Rapid_Induct_Password__c</fullName>
    <label>Rapid Induct Password</label>
    <length>15</length>
    <type>Text</type>
</CustomField>