force-app/main/default/objects/Employees__c/fields/Relationship_EC2__c.field-meta.xml
<CustomField>
    <fullName>Relationship_EC2__c</fullName>
    <label>Relationship (EC2)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Wife</fullName>
            </value>
            <value>
                <fullName>Husband</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Mother</fullName>
            </value>
            <value>
                <fullName>Father</fullName>
            </value>
            <value>
                <fullName>Son</fullName>
            </value>
            <value>
                <fullName>Daughter</fullName>
            </value>
            <value>
                <fullName>Aunty</fullName>
            </value>
            <value>
                <fullName>Uncle</fullName>
            </value>
            <value>
                <fullName>Grandparent</fullName>
            </value>
            <value>
                <fullName>Friend</fullName>
            </value>
            <value>
                <fullName>Relative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>