force-app/main/default/objects/Employees__c/fields/Relationship_to_Employee__c.field-meta.xml
<CustomField>
    <fullName>Relationship_to_Employee__c</fullName>
    <label>Relationship to Employee (EC1)</label>
    <length>30</length>
    <type>Text</type>
</CustomField>