force-app/main/default/objects/Employees__c/fields/Relevant_Department__c.field-meta.xml
<CustomField>
    <fullName>Relevant_Department__c</fullName>
    <label>Relevant Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Relevant_Department</valueSetName>
    </valueSet>
</CustomField>