force-app/main/default/objects/Employees__c/fields/Roster__c.field-meta.xml
<CustomField>
    <fullName>Roster__c</fullName>
    <label>Roster</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>On Hitch</fullName>
            </value>
            <value>
                <fullName>Off Hitch</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>