force-app/main/default/objects/Employees__c/fields/Santos_Security_Number__c.field-meta.xml
<CustomField>
    <fullName>Santos_Security_Number__c</fullName>
    <label>Santos Security #</label>
    <length>15</length>
    <type>Text</type>
</CustomField>