force-app/main/default/objects/Employees__c/fields/Start_Day__c.field-meta.xml
<CustomField>
    <fullName>Start_Day__c</fullName>
    <formula>LPAD(TEXT(MONTH( Start_Date__c  )), 2, &apos;0&apos;) &amp; &quot;/&quot; &amp; TEXT(DAY( Start_Date__c  ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start Day</label>
    <type>Text</type>
</CustomField>