force-app/main/default/objects/Employees__c/fields/Superannuation_Fund__c.field-meta.xml
<CustomField>
    <fullName>Superannuation_Fund__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Superannuation Fund</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Employees</relationshipLabel>
    <relationshipName>Employees</relationshipName>
    <type>Lookup</type>
</CustomField>