force-app/main/default/objects/Employees__c/fields/Superannuation_Number__c.field-meta.xml
<CustomField>
    <fullName>Superannuation_Number__c</fullName>
    <label>Superannuation Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>