force-app/main/default/objects/Employees__c/fields/Tax_File_Number__c.field-meta.xml
<CustomField>
    <fullName>Tax_File_Number__c</fullName>
    <label>Tax File Number</label>
    <length>12</length>
    <type>Text</type>
</CustomField>