force-app/main/default/objects/Employees__c/fields/Team_lookup__c.field-meta.xml
<CustomField>
    <fullName>Team_lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The team this employee is connected to.</inlineHelpText>
    <label>Team</label>
    <referenceTo>Team__c</referenceTo>
    <relationshipLabel>Employees</relationshipLabel>
    <relationshipName>Employees</relationshipName>
    <type>Lookup</type>
</CustomField>